--- a/estilos css/estilosgit.css
+++ b/estilos css/estilosgit.css
@@ -1,5 +1,14 @@
 .pagina-interna {
-div {
+     
+    background-image: url(../imagenes/blibio.png); 
+    background-size: cover;       
+    background-position: center;  
+    background-attachment: fixed; 
+    
+   
+    background-color: rgba(0, 0, 0, 0.4); 
+    background-blend-mode: overlay;
+
     background-color: white;
     margin: 20px 0;      
     padding: 15px;       
@@ -15,12 +24,8 @@ h4 {
     text-align: left;    
     border-bottom: 2px solid #3498db; 
 }
-img {
-    display: block;   
-    margin: 20px auto; 
-    max-width: 100%;  
-}
+
 .working { border-left: 5px solid #e7651a; }   
 .staged { border-left: 5px solid #1da2fc; }    
 .committed { border-left: 5px solid #7d8681; } 
-}
+
