--- a/estilos css/sesion.css
+++ b/estilos css/sesion.css
@@ -17,7 +17,7 @@ body.pagina-interna {
 
 /* Contenedor del Formulario */
 .login-container {
-    background-color: white; /* Ahora sí, el cuadro es blanco */
+    background-color: white; /* color del cuadro */
     padding: 30px;
     border-radius: 12px;
     box-shadow: 0px 4px 20px rgba(0,0,0,0.2);
